--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,13 @@
 {
   "pages": [
+    "pages/add-question/add-question",
+    "pages/add-test/add-test",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/info/info",
+    "pages/my/my",
+    "pages/complete/complete",
+    "pages/tag-detail/tag-detail"
   ],
   "window": {
     "backgroundTextStyle": "light",
