Add API requests

--- a/project.config.json
+++ b/project.config.json
@@ -46,7 +46,8 @@
     "userConfirmedBundleSwitch": true,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true
+    "minifyWXSS": true,
+    "skeletonGenerateFilesWithoutConfirm": true
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
