--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@miniprogram-i18n/core": "^1.0.0-rc.11"
+    "@dw/wx-cropper": "^1.0.6",
+    "@miniprogram-i18n/core": "^1.0.0-rc.11",
+    "ali-oss": "^6.13.2"
   }
 }
