--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,7 @@
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/*.js": true
+    "**/.DS_Store": true
   }
   // "files.associations": {
   //   "*.wxml": "html",
