--- a/src/app.json
+++ b/src/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/add-question/index",
     "pages/add-test/index",
     "pages/info/index",
     "pages/main/index",
@@ -20,7 +21,8 @@
     "pages/history/index",
     "pages/edit-my/index",
     "pages/messages/index",
-    "pages/test-detail/index"
+    "pages/test-detail/index",
+    "pages/add-test-question/index"
   ],
   "subpackages": [
     {
@@ -66,6 +68,5 @@
     "backgroundTextStyle": "dark",
     "backgroundColor": "#fff"
   },
-  "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
