--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,15 @@
     "removeComments": true,
     "pretty": true,
     "strictPropertyInitialization": true,
+    "baseUrl": ".",
+    "types": [
+      "miniprogram-api-typings"
+    ],
+    "paths": {
+      "@vant/weapp/*": [
+        "./node_modules/@vant/weapp/dist/*"
+      ]
+    },
     "lib": [
       "ES6",
       "ES2015.Promise"
