--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@miniprogram-i18n/core": "^1.0.0-rc.11",
     "@vant/weapp": "^1.6.8",
     "ali-oss": "^6.13.2",
-    "vant-weapp": "^0.5.29"
+    "vant-weapp": "^0.5.29",
+    "weui-miniprogram": "^1.0.8"
   }
 }
