--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/**.js": true
+    // "**/**.js": true
   }
   // "files.associations": {
   //   "*.wxml": "html",
